# lab-visor

./: .gitignore  .pylintrc  Dockerfile  README.md  alembic.prod.ini  pyproject.toml  requirements.txt
 .gitea / workflows /: build.yaml
.gitea/workflows/: build.yaml
alembic/versions/: 32fa3f43aae6_add_theme_on_category_app.py  723367806b32_add_container_name_on_shortcut_app.py  ef9515117a08_add_order_on_category_app.py
app/: database.py  main.py  models.py  request.py  responses.py  startup.py  utils.py
app/routers/: admin.py  auth.py  container.py  home.py  sys.py
app/routers/api/: __init__.py  category_app.py  debug.py  docker.py  shortcut_app.py  sys.py
app/static/css/: bootstrap-icons.css  style.css
app/static/js/: base.js  main.js
app/templates/: 404.jinja  alert.jinja  base.html  base.jinja  empty.jinja
app/templates/admin/: chart.html  index.html  text.html
app/templates/container/: card-container.jinja  index.jinja
app/templates/container-log/: index.jinja
app/templates/home/: card-category-app.jinja  card-shortcut-app.jinja  chart.html  index.html  index.jinja  modal.jinja  text.html  text.jinja
app/templates/sys/: chart.jinja  index.jinja  text.jinja
app/templates/sys/component/: disk-info.jinja
app/utils/: plot.py
